2006-10-13  Maynard Johnson <maynardj@us.ibm.com>
        * doc/opcontrol.1.in: Document callgraph support for PowerPC

2006-09-25  Jon Callan  <Jon.Callan@arm.com>

	* libopt++/popt_options.cpp: fix static init order problem, seen
	  on ARM.

2006-09-21  Dean Gaudet  <dgaudet@users.sourceforge.net>

	* events/i386/core_2/events: rename some events
	* events/i386/core_2/unit_masks: various fixes for
	  double-counting events

2006-09-21  Mark A. Greer  <mgreer@mvista.com>

	* events/ppc/7450/events:
	* events/ppc/7450/unit_masks:
	* utils/ophelp.c: ppc 745x event improvements.

2006-09-15  Will Cohen  <wcohen@redhat.com>

	* Makefile.am: Add ChangeLog-2004 and ChangeLog-2005 to distro.
	
2006-09-15  Will Cohen  <wcohen@redhat.com>

	* configure.in: Bump to 0.9.3cvs.

2006-09-15  Will Cohen  <wcohen@redhat.com>

	* configure.in: Bump to 0.9.2.

2006-09-11  Will Cohen  <wcohen@redhat.com>

	* configure.in: Bump to 0.9.2.1rc1.

2006-09-11  Will Cohen  <wcohen@redhat.com>

	* events/i386/core_2/unit_masks:
	* events/i386/core_2/events: Correct names and masks.
	
2006-09-07  Benjamin LaHaise  <bcrl@kvack.org>
	
	* events/i386/core_2/events: Correct some event names.

2006-09-05  Will Cohen  <wcohen@redhat.com>

	* configure.in: bump to 0.9.2

2006-09-05  Will Cohen  <wcohen@redhat.com>

	* libpp/symbol_container.cpp: Explicit casting.

2006-08-27  Ray Bryant  <raybry@amd.com>

	* events/x86-64/hammer/events:
	* events/x86-64/hammer/unit_masks:
	* libop/op_events.h: make names match the BKDG names from AMD

2006-08-22  Benjamin LaHaise  <bcrl@kvack.org>

	* events/Makefile.am:
	* events/i386/core_2/events:
	* events/i386/core_2/unit_masks:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c:
	* libop/op_events.c:
	* utils/ophelp.c: support Intel Core 2 events

2006-07-15  Luca Barbato  <lu_zero@gentoo.org>

	* events/Makefile.am:
	* events/ppc/7450/events:
	* events/ppc/7450/unit_masks:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c:
	* libop/op_events.c: